Fixed some spacing

--- a/styles/main.css
+++ b/styles/main.css
@@ -100,9 +100,9 @@ header {
 }
 
 .aboutMe {
-	background-color:#333333;
+	background-color: #333333;
 	margin: 0;
-	padding: 30px;
+	padding: 30px 120px 30px 120px;
 	font-size: 1.2em;
 }
 
@@ -124,7 +124,7 @@ header {
 .timeline {
 	text-align: center;
 	background-color: white;
-	padding-top: 5em;
+	padding-top: 0.01px;
 	padding-bottom: 1px;
 }
 
@@ -134,6 +134,7 @@ header {
 	position: absolute;
 	left: 50%;
 	margin-left: -3px;
+	padding: 5px;
 }
 
 .timelineElement {
